--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>You are logged in</h1>
+<h1>You are logged in and your session is <span th:text="${sessionId}"></span></h1>
+<h1 th:text="${user.getName()}"></h1>
 </body>
 </html>
